--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_ENV=production
+APP_KEY=base64:Xc3CwcSaSpwYtgxU7JPnxHWh84+5D9xDqcbZLIObtb4=
+APP_DEBUG=false
+APP_URL=https://cm-notas-app.herokuapp.com
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=eu-cdbr-west-03.cleardb.net
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_346144cbcec2266
+DB_USERNAME=b030d712858b9d
+DB_PASSWORD=7c425b59
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
